v0.6-Added for convenience